Updated css file to meet udacity css style specifications

--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@
  line-height: 200%;
 }
 
-h1 {
+  h1 {
   font-size: 48px;
 }
 
@@ -28,45 +28,38 @@ h2 {
 
 .left-column {
   padding: 0px;
-  margin-left: 0px;
 }
 
 .image {
-  margin-top: 0px;
-  padding: 22px 15px 0px;
+  padding: 20px 15px 0px;
 }
 
 .highlights {
-  margin: 30px 20px 20px 15px;
-  padding: 0px 30px 0px 0px;
+  padding: 15px 0;
 }
 
-.highlights-container  {
+.highlights-container {
+  margin: 15px;
+  padding: 10px 0;
   border: solid 1px #ccc;
-  padding-bottom: 30px;
-  padding-left: 10px;
-  padding-top: 10px;
 }
 
 .highlights-title {
-  padding-left: 20px;
-  margin-bottom: 20px;
+  padding: 0 30px;
 }
 
 .bullet-points {
-  margin-top: 30px;
-  margin-left: 20px;
+  padding: 20px 30px;
 }
 
 /* right column items */
 
 .right-column {
-  padding-right: 0px;
-  padding-left: 0px;
+  padding: 0;
 }
 
 .article-header {
-  padding-left: 15px;
+  padding: 0 15px;
 }
 
 .article-content {
